@@ -1,0 +1,42 @@
+# Expect driver script for GCC Regression Tests
+# Copyright (C) 2019 Free Software Foundation
+#
+# This file is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+
+if $tracelevel then {
+    strace $tracelevel
+}
+
+# load support procs
+load_lib gm2-torture.exp
+
+global TORTURE_OPTIONS
+
+set TORTURE_OPTIONS [list \
+			 { -O2 -fsoft-check-all } \
+			 { -O2 -g -fsoft-check-all } \
+			 { -O3 -fsoft-check-all } \
+		         { -O3 -g -fsoft-check-all } ]
+
+gm2_init_iso ${srcdir}/gm2/iso/check/fail
+
+foreach testcase [lsort [glob -nocomplain $srcdir/$subdir/*.mod]] {
+    # If we're only testing specific files and this isn't one of them, skip it.
+    if ![runtest_file_p $runtests $testcase] then {
+	continue
+    }
+
+    gm2-torture-fail $testcase
+}
