@@ -1,6 +1,6 @@
 2019-08-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
-	* gm2-gcc/m2expr.c:  (checkWholeNegateOverflow) return
+	* gm2/gm2-gcc/m2expr.c:  (checkWholeNegateOverflow) return
           checking tree.  (m2expr_checkUnaryWholeOverflow)
           return checking tree.  (m2expr_build_unary_op_check)
           ensure that the checking tree is combined with the
@@ -17,7 +17,13 @@
           tree is combined with the result tree using a COMPOUND_EXPR.
           (m2expr_BuildISOModM2Check) New function.
           (m2expr_BuildModM2Check) tidied up and call
-           m2expr_BuildISOModM2Check.
+          m2expr_BuildISOModM2Check.
+	* gm2/gm2-gcc/m2expr.c:  (checkWholeModCeilOverflow) use
+          the correct parameter to test against zero.
+          (checkWholeModFloorOverflow)  New function.
+          (m2expr_checkWholeOverflow) enable FLOOR_MOD_EXPR checking.
+          (m2expr_BuildISOModM2Check) rewritten.
+	  (Completed modulus checking and enabled with -fsoft-check-all).
 
 2019-08-22      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
